change http://fonts to https

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 <meta name="twitter:card" content="summary" />
 <meta name="twitter:description" content="HMK" />
 <meta name="twitter:title" content="HMK - HMK" />
-<script type='application/ld+json'>{"@context":"http:\/\/schema.org","@type":"WebSite","@id":"#website","url":"http:\/\/www.hmk.com.pl\/","name":"HMK","potentialAction":{"@type":"SearchAction","target":"http:\/\/www.hmk.com.pl\/?s={search_term_string}","query-input":"required name=search_term_string"}}</script>
+<script type='application/ld+json'>{"@context":"https:\/\/schema.org","@type":"WebSite","@id":"#website","url":"https:\/\/www.hmk.com.pl\/","name":"HMK","potentialAction":{"@type":"SearchAction","target":"https:\/\/www.hmk.com.pl\/?s={search_term_string}","query-input":"required name=search_term_string"}}</script>
 <!-- / Yoast SEO plugin. -->
 
 <link rel='dns-prefetch' href='index.html' />
