--- a/uslugi/klimatyzacja/montaz/index.html
+++ b/uslugi/klimatyzacja/montaz/index.html
@@ -60,7 +60,7 @@
 <!-- / Yoast SEO plugin. -->
 
 <link rel='dns-prefetch' href='../../../index.html' />
-<link rel='dns-prefetch' href='http://fonts.googleapis.com/' />
+<link rel='dns-prefetch' href='https://fonts.googleapis.com/' />
 <link rel='dns-prefetch' href='http://s.w.org/' />
 <link rel="alternate" type="application/rss+xml" title="HMK &raquo; Kanał z wpisami" href="../../../feed/index.html" />
 <link rel="alternate" type="application/rss+xml" title="HMK &raquo; Kanał z komentarzami" href="../../../comments/feed/index.html" />
