change http to https

--- a/index.html
+++ b/index.html
@@ -886,7 +886,7 @@ ul. Burów 51<br />
                       </style>
                       <div role="form" class="wpcf7" id="wpcf7-f4-o1" lang="pl-PL" dir="ltr">
 <div class="screen-reader-response"></div>
-<form action="http://www.hmk.com.pl/#wpcf7-f4-o1" method="post" class="wpcf7-form" novalidate="novalidate">
+<form action="https://www.hmk.com.pl/#wpcf7-f4-o1" method="post" class="wpcf7-form" novalidate="novalidate">
 <div style="display: none;">
 <input type="hidden" name="_wpcf7" value="4" />
 <input type="hidden" name="_wpcf7_version" value="4.9.2" />
