--- a/index.html
+++ b/index.html
@@ -847,7 +847,7 @@ ul. Burów 51<br />
                       <div class="col-md-4 kd-services">
                         <i class="fa fa-envelope-o thbg-color"></i>
                         <h5>Email</h5>
-                         <p><p><a href="mailto:biuro@hmk.net.pl">biuro@hmk.net.pl</a></p>
+                         <p><p><a href="mailto:biuro@hmk.com.pl">biuro@hmk.com.pl</a></p>
 <p>&nbsp;</p>
 </p>                      </div>
 
