change phone number

--- a/index.html
+++ b/index.html
@@ -842,11 +842,12 @@ ul. Burów 51<br />
                       <div class="col-md-4 kd-services">
                         <i class="fa fa-phone thbg-color"></i>
                         <h5>Telefon</h5>
-                        <p><p>605083332</p>
+                        <p><p>603030950</p>
 </p>                      </div>
                       <div class="col-md-4 kd-services">
                         <i class="fa fa-envelope-o thbg-color"></i>
-                        <h5>Email</h5>
+						<h5>Email</h5>
+						<p><p></p><a href="mailto:hmk.haber@gmail.com">hmk.haber@gmail.com</a></p>
                          <p><p><a href="mailto:biuro@hmk.com.pl">biuro@hmk.com.pl</a></p>
 <p>&nbsp;</p>
 </p>                      </div>
